--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img 
+    src="https://image.shutterstock.com/image-photo/kiev-ukraine-april-20-2015-260nw-273231134.jpg"
+    alt="Hello Kitty!"
+    />
+    <img 
+    src="https://i.pinimg.com/originals/2b/f5/36/2bf53665bd4a122c084da11c5c0a2655.jpg"
+    alt="Sleepy Kitty"
+    title="The Sleepiest Kitty"
+    />
   </body>
 </html>
